--- a/app/javascript/styles/blue2/variables.scss
+++ b/app/javascript/styles/blue2/variables.scss
@@ -1,18 +1,18 @@
-// Theme: chocolate
+// Theme: blue2
 
 // Commonly used web colors
 $black: #000000;            // Black
 $white: #ffffff;            // White
-$success-green: #79bd9a !default;     // Padua
+$success-green: #77ee99 !default;     // Padua
 $error-red: #df405a !default;         // Cerise
 $warning-red: #ff5050 !default;       // Sunset Orange
 $gold-star: #ca8f04 !default;         // Dark Goldenrod
 
 // Values from the classic Mastodon UI
-$classic-base-color: #372c28;
-$classic-primary-color: #c8ae9b;
-$classic-secondary-color: #e8e1d9;
-$classic-highlight-color: rgba(#d9902b, 0.7);
+$classic-base-color: rgba(#113377, 0.7);
+$classic-primary-color: #aaeeaa;
+$classic-secondary-color: #aaeeee;
+$classic-highlight-color: rgba(#ee77bb, 0.7);
 
 // Variables for defaults in UI
 $base-shadow-color: $black !default;
@@ -32,14 +32,14 @@ $ui-highlight-color: $classic-highlight-color !default;
 // Variables for texts
 $primary-text-color: $white !default;
 $darker-text-color: $ui-primary-color !default;
-$dark-text-color: $ui-base-lighter-color !default;
+$dark-text-color: #bbccdd !default;
 $secondary-text-color: $ui-secondary-color !default;
 $highlight-text-color: $ui-highlight-color !default;
 $action-button-color: rgba($white, 0.4);
 // For texts on inverted backgrounds
 $inverted-text-color: $ui-base-color !default;
 $lighter-text-color: $ui-base-lighter-color !default;
-$light-text-color: $ui-primary-color !default;
+$light-text-color: darken($ui-primary-color, 36%) !default;
 
 // Language codes that uses CJK fonts
 $cjk-langs: ja, ko, zh-CN, zh-HK, zh-TW;
