--- a/app/javascript/styles/mastodon/forms.scss
+++ b/app/javascript/styles/mastodon/forms.scss
@@ -393,7 +393,7 @@ code {
 
   .actions {
     margin-top: 30px;
-    display: block;
+    display: flex;
 
     &.actions--top {
       margin-top: 0;
