Modify custom themes

--- a/app/javascript/styles/pink/variables.scss
+++ b/app/javascript/styles/pink/variables.scss
@@ -10,9 +10,9 @@ $gold-star: #ffa500 !default;         // Orange
 
 // Values from the classic Mastodon UI
 $classic-base-color: #fcddfc;
-$classic-primary-color: #e07090;
-$classic-secondary-color: #cc33dd;
-$classic-highlight-color: #ffaa55;
+$classic-primary-color: #e09090;
+$classic-secondary-color: #cc55dd;
+$classic-highlight-color: #ffcc55;
 
 // Variables for defaults in UI
 $base-shadow-color: $white !default;
