--- a/app/javascript/styles/wallpaper-light.scss
+++ b/app/javascript/styles/wallpaper-light.scss
@@ -624,6 +624,7 @@ button.icon-button.disabled i.fa-retweet {
 
 /*** インスタンスティッカー ***/
 /*** https://github.com/Tickerjp/InstanceTicker ***/
+.status a[href^='https://kurage.cc/'] .display-name:after{font-size:12px!important;height:16px!important;display:block!important;white-space:pre!important;text-overflow:ellipsis!important;color:#fff!important;padding-left:18px!important;background: url('https://wee.jp/f/kurage.cc'),linear-gradient(90deg,#49b,transparent)!important;background-repeat:no-repeat,no-repeat!important;content:'クラゲ丼'!important;}
 
 @import url("https://wee.jp/css/1.css");
 
