--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -690,6 +690,7 @@
     .compose-form__publish-button-wrapper {
       overflow: hidden;
       padding-top: 10px;
+      padding-bottom: 10px;
     }
   }
 }
