--- a/app/javascript/styles/wallpaper.scss
+++ b/app/javascript/styles/wallpaper.scss
@@ -626,6 +626,7 @@ button.icon-button.disabled i.fa-retweet {
 /*** https://github.com/Tickerjp/InstanceTicker ***/
 
 @import url("https://wee.jp/css/1.css");
+@import 'ticker2';
 
 /*** お気に入りボタンをクラゲに変更 ***/
 /*** https://gist.github.com/theoria24/8ac3ac0f8167b109eb0724c4563ddf6d ***/
